# aibot

./: .dockerignore  .env.sample  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  mypy.ini  pyproject.toml  ruff.toml
docs/: ARCHITECTURE.md
resources/: README.md  agents-sample.yml  agents.yml  llm-models.json  speakers.json
resources/instructions/: sample.yml
src/aibot/: __main__.py  logger.py
src/aibot/db/: __init__.py  base.py  engine.py
src/aibot/db/models/: __init__.py  agent_run.py  channel_config.py  reminder.py  usage.py
src/aibot/discord/: __init__.py  client.py  event.py  guild_guard.py
src/aibot/discord/command/: __init__.py  ai.py  chat.py  fixme.py  instruction.py  limit.py  provider.py  voice.py
src/aibot/discord/commands/: __init__.py  ai.py  limit.py  remind.py  remind_ch.py
src/aibot/discord/decorator/: access.py  instruction.py  usage.py
src/aibot/discord/decorators/: access.py  usage.py
src/aibot/discord/events/: __init__.py  on_message.py  on_voice_state_update.py  startup.py
src/aibot/infrastructure/api/: _base.py  agents.py  anthropic.py  factory.py  google_ai.py  openai.py
src/aibot/infrastructure/dao/: _base.py  agent.py  connection.py  instruction.py  tts.py  usage.py
src/aibot/model/: agent.py  message.py
src/aibot/service/: agents.py  instruction.py  llm_resolver.py  provider.py  restriction.py  scheduler.py  tts.py
src/aibot/services/: __init__.py  agent_runs.py  agents.py  channel_config.py  daily_reset.py  reminder.py  scheduler.py  usage.py
(+2 files in other folders)
