[project]
name = "aibot"
version = "0.1.0-alpha"
description = " AI-powered Discord bot."
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "anthropic>=0.64.0",
    "discord-py[voice]>=2.6.2",
    "google-genai>=1.32.0",
    "openai>=1.102.0",
    "openai-agents>=0.3.3",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "ruff>=0.12.11",
    "types-pytz>=2025.2.0.20250809",
    "types-pyyaml>=6.0.12.20250822",
    "types-requests>=2.32.4.20250809",
]
