[project]
name = "aibot"
version = "0.1.0"
description = "AI-enhanced Discord bot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20",
    "discord>=2.3.2",
    "openai-agents>=0.17.7",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "sqlalchemy[asyncio]>=2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
    "ty>=0.0.55",
]
